1단계 - EntityPersister 구현 (#189)
* docs: 1단계 요구 사항 정리

* refactor: JavaTypeConvertor 와 Dialect 책임 분리

- JavaTypeConvertor: 자바 타입에 종속된 컨버터
- Dialect: DB 벤더에 종속된 컨버터

* refactor: EntityTable의 책임 분산

* refactor: EntityField 코드 정리

* refactor: 클래스명 변경

* refactor: 패키지 이동

* refactor: 클래스명 변경

* refactor: TableName 추상화

* refactor: ColumnName 추상화

* refactor: ColumnLength 추상화

* refactor: ColumnIdOption 추상화

* refactor: ColumnOption 추상화

* refactor: ColumnValue 추상화

* refactor: 클래스명 변경

* refactor: 패키지 정리

* refactor: 클래스명 변경

* feat: 요구 사항 1 - Persistence Context 구현

* feat: 요구 사항 2 - Persister 구현

* fix: DefaultRowMapper 버그 픽스

* feat: EntityManager에서 EntityPersister와 PersistenceContext를 관리하도록 수정

* refactor: 메서드명 변경